package com.example.taskmanagement.model;

public enum TaskStatus {
    PENDING,
    ASSIGNED,
    RECEIVED,
    IN_PROGRESS,
    PAUSED,
    SUBMITTED_FOR_QA,
    QA_COMPLETING,
    QA_COMPLETED,
    COMPLETED,
    FAILED
}
