package com.example.taskmanagement.model;

public final class TaskTypes {
    public static final String DATA_COLLECTION = "DATA_COLLECTION";
    public static final String DATA_PROCESSING = "DATA_PROCESSING";
    public static final String QUALITY_ASSURANCE = "QUALITY_ASSURANCE";
    public static final String DATA_PUBLISHING = "DATA_PUBLISHING";
    public static final String UNKNOWN_PROJECT_TYPE = "UNKNOWN_PROJECT_TYPE";

    private TaskTypes() {}
}
